--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <!-- Настройки (API_URL подставит GAS) -->
   <script>
-    const API_URL = '<?!= API_URL ?>';
+    const API_URL = 'https://script.google.com/macros/s/AKfycbw8aLams3GM9rRNNAhhVQmWnXIt7sDlzLUsXDsSWh2OVg6_eX8_wD0hFKHsmd0IYsRx/exec';
     const FUNNEL_COLUMNS = [
       'Обращение (Лид)','Заказ оформлен','Ожидаем оплату',
       'На доставке','Отгружен','Помойка'
