--- a/index.html
+++ b/index.html
@@ -5,20 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CRM Воронка — Google Sheets</title>
 
-  <!-- Настройки (API_URL подставит GAS) -->
+  <!-- === НАСТРОЙКИ === -->
   <script>
+    // URL задеплоенного Web App (GAS), обязательно оканчивается на /exec
     const API_URL = 'https://script.google.com/macros/s/AKfycbw8aLams3GM9rRNNAhhVQmWnXIt7sDlzLUsXDsSWh2OVg6_eX8_wD0hFKHsmd0IYsRx/exec';
+
+    // Колонки воронки (точно как в столбце "Статус")
     const FUNNEL_COLUMNS = [
-      'Обращение (Лид)','Заказ оформлен','Ожидаем оплату',
-      'На доставке','Отгружен','Помойка'
+      'Обращение (Лид)',
+      'Заказ оформлен',
+      'Ожидаем оплату',
+      'На доставке',
+      'Отгружен',
+      'Помойка'
     ];
-    const OPTIONAL_MANAGER_FIELD = 'Менеджер'; // если есть такой столбец
+    // Необязательный столбец. Если есть — появится поле «Менеджер»
+    const OPTIONAL_MANAGER_FIELD = 'Менеджер';
   </script>
 
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- SortableJS для плавного DnD -->
   <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.2/Sortable.min.js"></script>
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
@@ -26,10 +35,9 @@
   <style>
     body { font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; }
     dialog::backdrop { background: rgba(0,0,0,.35); }
+
     /* Скелетон */
-    .shimmer {
-      position: relative; overflow: hidden; background: #e5e7eb; border-radius: .5rem;
-    }
+    .shimmer { position: relative; overflow: hidden; background: #e5e7eb; border-radius: .5rem; }
     .shimmer::after{
       content:''; position:absolute; inset:0;
       transform: translateX(-100%);
@@ -38,7 +46,7 @@
     }
     @keyframes shimmer { 100% { transform: translateX(100%); } }
 
-    /* Мобилка: диалог на весь экран */
+    /* Мобильная диалоговая — на весь экран */
     @media (max-width: 640px){
       dialog { width: 100vw !important; max-width: 100vw !important; height: 100vh; border-radius: 0 !important; }
     }
@@ -54,7 +62,7 @@
     </div>
   </div>
 
-  <!-- Логин -->
+  <!-- Логин-экран -->
   <section id="gate" class="min-h-screen flex items-center justify-center p-4">
     <div class="w-full max-w-md bg-white border rounded-2xl shadow-xl p-6 animate-[fadeIn_.4s_ease]">
       <h1 class="text-2xl font-bold mb-1">Вход в CRM</h1>
@@ -66,29 +74,25 @@
     </div>
   </section>
 
-  <!-- Приложение -->
+  <!-- Приложение (после логина) -->
   <main id="app" class="hidden">
     <div class="max-w-[1400px] mx-auto p-4">
-      <!-- Шапка: на мобиле элементы в 2 строки -->
+      <!-- Шапка -->
       <header class="flex flex-col gap-3 sm:flex-row sm:items-center sm:justify-between mb-4">
         <div class="flex items-center justify-between sm:justify-start gap-3">
           <h2 class="text-2xl font-bold">CRM-воронка</h2>
-          <span class="text-xs px-2 py-1 rounded-full bg-emerald-100 text-emerald-800 border border-emerald-200">
-            Редактирование включено
-          </span>
+          <span class="text-xs px-2 py-1 rounded-full bg-emerald-100 text-emerald-800 border border-emerald-200">Редактирование включено</span>
         </div>
         <div class="flex gap-2 w-full sm:w-auto">
-          <input id="search" placeholder="Поиск по телефону / детали / комментарию"
-                 class="px-3 py-2 rounded-lg bg-white border text-slate-900 flex-1 sm:w-80" />
+          <input id="search" placeholder="Поиск по телефону / детали / комментарию" class="px-3 py-2 rounded-lg bg-white border text-slate-900 flex-1 sm:w-80" />
           <button id="btnAdd" class="px-3 py-2 rounded-lg bg-black text-white">+ Лид</button>
           <button id="btnLogout" class="px-3 py-2 rounded-lg bg-white border">Выйти</button>
         </div>
       </header>
 
-      <!-- Скелетон при первой загрузке -->
+      <!-- Скелетон -->
       <div id="skeleton" class="mb-2">
         <div class="flex sm:grid sm:grid-cols-3 xl:grid-cols-6 gap-3 overflow-x-auto snap-x snap-mandatory pb-2">
-          <!-- 6 placeholder-колонок -->
           <template id="skCol">
             <div class="min-w-[85vw] sm:min-w-0 sm:flex-1 bg-white border rounded-2xl p-3">
               <div class="h-5 w-40 shimmer mb-3"></div>
@@ -123,12 +127,12 @@
         <div><label class="block text-slate-600">Закупка</label><input id="f_buy" class="w-full border rounded px-2 py-1 bg-white text-slate-900" /></div>
         <div><label class="block text-slate-600">Касса</label><input id="f_cash" class="w-full border rounded px-2 py-1 bg-white text-slate-900" /></div>
         <div><label class="block text-slate-600">Логисты</label><input id="f_log" class="w-full border rounded px-2 py-1 bg-white text-slate-900" /></div>
-        <div><label class="block text-slate-600">Возврат клиенту</label><input id="f_refc" class="w-full border rounded px-2 py-1 bg-white text-slate-900" /></div>
-        <div><label class="block text-slate-600">Возврат от поставщика</label><input id="f_refp" class="w-full border rounded px-2 py-1 bg-white text-slate-900" /></div>
-        <div><label class="block text-slate-600">Прибыль с заказа</label><input id="f_profit" class="w-full border rounded px-2 py-1 bg-white text-slate-900" /></div>
-        <div><label class="block text-slate-600">Статус</label><select id="f_status" class="w-full border rounded px-2 py-1 bg-white text-slate-900"></select></div>
-        <div class="sm:col-span-2"><label class="block text-slate-600">Коментарий</label><textarea id="f_comment" class="w-full border rounded px-2 py-1 bg-white text-slate-900" rows="3"></textarea></div>
-        <div class="sm:col-span-2" id="managerRow" style="display:none"><label class="block text-slate-600">Менеджер</label><input id="f_manager" class="w-full border rounded px-2 py-1 bg-white text-slate-900" /></div>
+        <div><label class="block text-slate-600">Возврат клиенту</label><input id="f_refc" class="w-full border rounded px-2 py-1 bg-white text-сlate-900" /></div>
+        <div><label class="block text-slate-600">Возврат от поставщика</label><input id="f_refp" class="w-full border rounded px-2 py-1 bg-white text-сlate-900" /></div>
+        <div><label class="block text-slate-600">Прибыль с заказа</label><input id="f_profit" class="w-full border rounded px-2 py-1 bg-white text-сlate-900" /></div>
+        <div><label class="block text-slate-600">Статус</label><select id="f_status" class="w-full border rounded px-2 py-1 bg-white text-сlate-900"></select></div>
+        <div class="sm:col-span-2"><label class="block text-slate-600">Коментарий</label><textarea id="f_comment" class="w-full border rounded px-2 py-1 bg-white text-сlate-900" rows="3"></textarea></div>
+        <div class="sm:col-span-2" id="managerRow" style="display:none"><label class="block text-slate-600">Менеджер</label><input id="f_manager" class="w-full border rounded px-2 py-1 bg-white text-сlate-900" /></div>
       </div>
       <div class="flex justify-between mt-4">
         <button id="btnDelete" class="px-3 py-2 rounded-lg border bg-white" value="cancel">Перенести в «Помойка»</button>
@@ -147,19 +151,24 @@
     const state = { rows: [], token: localStorage.getItem('crm_token')||'', hasManager:false };
 
     function showApp(on){ $('#gate').classList.toggle('hidden', on); $('#app').classList.toggle('hidden', !on); }
-    function escapeHtml(s){ return String(s).replace(/[&<>"']/g, c=>({"&":"&amp;","<":"&lt;","»":"&gt;","\"":"&quot;","'":"&#39;"}[c])); }
+    function escapeHtml(s){ return String(s).replace(/[&<>"']/g, c=>({"&":"&amp;","<":"&lt;",">":"&gt;","\"":"&quot;","'":"&#39;"}[c])); }
     function overlay(on, text){ const o=$('#overlay'); $('#overlayText').textContent=text||'Загрузка…'; o.classList.toggle('hidden', !on); o.classList.toggle('flex', on); }
 
+    // Универсальный вызов API
     async function api(action, payload = {}) {
       const body = { action, ...payload };
-      const r = await fetch(API_URL, {
-        method:'POST',
-        headers:{ 'Content-Type':'text/plain;charset=utf-8' },
-        body: JSON.stringify(body)
-      });
-      const txt = await r.text(); let data;
-      try { data = JSON.parse(txt); } catch { return { ok:false, error:'bad_json', raw:txt }; }
-      return data;
+      try {
+        const r = await fetch(API_URL, {
+          method:'POST',
+          headers:{ 'Content-Type':'text/plain;charset=utf-8' },
+          body: JSON.stringify(body)
+        });
+        const txt = await r.text();
+        let data; try { data = JSON.parse(txt); } catch { return { ok:false, error:'bad_json', raw:txt }; }
+        return data;
+      } catch (err) {
+        return { ok:false, error:'network', detail:String(err) };
+      }
     }
 
     // ======= Рендер =======
@@ -171,7 +180,6 @@
 
     function renderBoard(){
       const board = $('#board'); board.innerHTML = '';
-      // мобилка: горизонтальный скролл, колонки с min-width
       FUNNEL_COLUMNS.forEach(col => {
         const colBox = document.createElement('div');
         colBox.className = 'min-w-[85vw] sm:min-w-0 sm:flex-1 bg-white text-slate-900 border rounded-2xl p-3 snap-start';
@@ -188,7 +196,7 @@
         colBox.querySelector('.count').textContent = items.length;
         board.appendChild(colBox);
       });
-      setupDnD();
+      setupDnD(); // включаем плавное DnD
     }
 
     function renderCard(row){
@@ -214,7 +222,7 @@
       return card;
     }
 
-    // ======= DnD на SortableJS =======
+    // ======= DnD на SortableJS (плавное + без полной перерисовки) =======
     function setupDnD(){
       $$('.col-drop').forEach(el => {
         new Sortable(el, {
@@ -227,16 +235,18 @@
             const id = card.dataset.id;
             const newStatus = evt.to.dataset.status;
 
+            // локально меняем статус
             const row = state.rows.find(r => String(r.id) === String(id));
             const prevStatus = row ? row['Статус'] : null;
             if (row) row['Статус'] = newStatus;
 
-            // обновим счётчики визуально
+            // визуальные счётчики
             const oldHeader = evt.from.parentElement.querySelector('.count');
             const newHeader = evt.to.parentElement.querySelector('.count');
             if (oldHeader) oldHeader.textContent = (+oldHeader.textContent - 1);
             if (newHeader) newHeader.textContent = (+newHeader.textContent + 1);
 
+            // сохраняем на сервере
             const res = await api('move', { id, status: newStatus, token: state.token });
             if (!res.ok) {
               // откат
@@ -256,20 +266,20 @@
       const row = state.rows.find(r=>String(r.id)===String(id));
       if (!row) return;
 
-      $('#f_id').value    = row.id || '';
-      $('#f_date').value  = row['Дата заказа'] || '';
+      $('#f_id').value = row.id || '';
+      $('#f_date').value = row['Дата заказа'] || '';
       $('#f_phone').value = row['Телефон клиента'] || '';
       $('#f_price').value = row['Цена,$'] || '';
       $('#f_title').value = row['Наименование детали'] || '';
-      $('#f_art').value   = row['Артикул поставщика'] || '';
-      $('#f_link').value  = row['Ссылка'] || '';
-      $('#f_sale').value  = row['Продажа'] || '';
-      $('#f_buy').value   = row['Закупка'] || '';
-      $('#f_cash').value  = row['Касса'] || '';
-      $('#f_log').value   = row['Логисты'] || '';
-      $('#f_refc').value  = row['Возврат клиенту'] || '';
-      $('#f_refp').value  = row['Возврат от поставщика'] || '';
-      $('#f_profit').value= row['Прибыль с заказа'] || '';
+      $('#f_art').value = row['Артикул поставщика'] || '';
+      $('#f_link').value = row['Ссылка'] || '';
+      $('#f_sale').value = row['Продажа'] || '';
+      $('#f_buy').value = row['Закупка'] || '';
+      $('#f_cash').value = row['Касса'] || '';
+      $('#f_log').value = row['Логисты'] || '';
+      $('#f_refc').value = row['Возврат клиенту'] || '';
+      $('#f_refp').value = row['Возврат от поставщика'] || '';
+      $('#f_profit').value = row['Прибыль с заказа'] || '';
       $('#f_comment').value = row['Коментарий'] || '';
 
       const sel = $('#f_status'); sel.innerHTML='';
@@ -371,16 +381,26 @@
       ev.preventDefault();
       $('#gateMsg').classList.add('hidden');
       const pwd = $('#pwd').value.trim();
-      if (!pwd){ $('#gateMsg').textContent='Введите пароль'; $('#gateMsg').classList.remove('hidden'); return; }
+      if (!pwd){ const el=$('#gateMsg'); el.textContent='Введите пароль'; el.classList.remove('hidden'); return; }
       overlay(true,'Входим…');
       const r = await api('auth', { password: pwd });
       overlay(false);
-      if (!r.ok) { $('#gateMsg').textContent = r.message || r.error || 'Неверный пароль'; $('#gateMsg').classList.remove('hidden'); return; }
+      if (!r.ok) { const el=$('#gateMsg'); el.textContent = r.message || r.error || 'Неверный пароль'; el.classList.remove('hidden'); return; }
       state.token = r.token; localStorage.setItem('crm_token', state.token);
       await loadData(); showApp(true);
     };
+
     $('#btnLogout').onclick = ()=>{ state.token=''; localStorage.removeItem('crm_token'); showApp(false); };
 
+    function showApiError(res, fallback){
+      console.log('API error:', res);
+      if (res.error === 'unauthorized'){ state.token=''; localStorage.removeItem('crm_token'); showApp(false); alert('Сессия истекла. Войдите снова.'); return; }
+      if (res.error === 'bad_json'){ alert((fallback||'Ошибка') + '\nСервер вернул не-JSON:\n' + (res.raw||'')); return; }
+      if (res.error === 'network'){ alert('Сеть недоступна или API не отвечает'); return; }
+      alert((fallback||'Ошибка') + (res.message ? (': ' + res.message) : (res.error ? (': ' + res.error) : '')));
+    }
+
+    // ======= Загрузка данных =======
     async function loadData(){
       renderSkeleton(); $('#skeleton').classList.remove('hidden'); $('#board').classList.add('hidden');
       const res = await api('list', { token: state.token });
@@ -392,7 +412,7 @@
       $('#skeleton').classList.add('hidden'); $('#board').classList.remove('hidden');
     }
 
-    // Автовход при наличии токена
+    // Автовход, если токен уже есть
     (async function bootstrap(){
       if (state.token) {
         await loadData(); showApp(true);
